# ATLAS-WALLET

./: .dockerignore  .gitignore  Dockerfile  RAILWAY_DEPLOY.md  README.md  package-lock.json
Atlas_Wallet_backend/: README.md  main.py  pyproject.toml  server.py
Atlas_Wallet_backend/api/data/: full_partner_offers.json  partners.json
Atlas_Wallet_backend/api/routes/: agent.py  catalog.py  wallet.py
Atlas_Wallet_backend/app/agent/: graph.py  tools.py
Atlas_Wallet_backend/app/services/: cart_service.py  context_service.py  purchase_service.py  search_service.py  wallet_service.py
Atlas_Wallet_backend/mocks/: wallet_mock.py
atlas_wallet_frontend/: .env.example  README.md  index.html  package.json  tailwind.config.ts  vite.config.ts
atlas_wallet_frontend/.lovable/: plan.md
atlas_wallet_frontend/src/: App.tsx  index.css  vite-env.d.ts
atlas_wallet_frontend/src/components/: AppLayout.tsx  ChatAssistantMarkdown.tsx  PaymentSheet.tsx
atlas_wallet_frontend/src/hooks/: useAuth.tsx
atlas_wallet_frontend/src/integrations/supabase/: client.ts  types.ts
atlas_wallet_frontend/src/lib/: atlasBackend.ts  mapAtlasProduct.ts  seedOrderTracking.ts
atlas_wallet_frontend/src/pages/: Auth.tsx  Cart.tsx  Chat.tsx  Index.tsx  Orders.tsx  WalletPage.tsx
atlas_wallet_frontend/supabase/: config.toml
atlas_wallet_frontend/supabase/functions/advance-tracking/: index.ts
atlas_wallet_frontend/supabase/functions/ai-shop/: index.ts
atlas_wallet_frontend/supabase/migrations/: 20260418225034_65c9db56-5da4-4c19-a8b1-a55e6a524893.sql
(+1 files in other folders)
