[project]
name = "Atlas_Wallet_backend"
version = "0.1.0"
description = "Atlas Wallet - Agentic shopping layer with LangGraph"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "openai>=1.50.0",
    "langgraph>=0.2.60",
    "langchain-openai>=0.2.14",
    "langchain-core>=0.3.28",
    "pydantic>=2.9.0",
    "langchain>=1.2.15",
    "rapidfuzz>=3.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
